# 1.09.00 (38004) Jan 9, 2010
1/9/10 public version for milestone "full redeploy, 2010 Q1"
# 1.08.01 (37358) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
12/4/09 #89, subclass PaintImmediateDialog instead of JDialog
# 1.08.00 (30610) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30609
# 1.07.02 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 1.07.01 (28794) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
12/11/08 - #1020, use new gun image created by Noah P.
12/8/08 - #1003, use closeButton.png from phetcommon
10/8/08 - use PhetApplicationConfig.launchSim
10/8/08 - moved list of rejected features to Unfuddle 802
6/24/08 - move SphericalNode to piccolo-phet
5/20/08 - replace Font with PhetFont
# 1.07.00 (21248)
# 1.06.01 (21223)
5/7/08 - pickup PhetDefaultFont support for Japanese preferred fonts [543]
4/4/08 - remove clock icon from HAClockControlPanel, animated icon was added to phetcommon
1/7/08 - replace "Lucida Sans" with PhetDefaultFont in test code
# 1.06.00 (18580)
11/16/07 - Experiment atom was getting stuck in (2,0,0), needed to attached a MetastableHander to it (similar to Schrodinger)
11/9/07 - move about.credits property to localization file
8/29/07 - replace HAWiggleMe with piccolo-phet DefaultWiggleMe
8/29/07 - replace JLabel().getFont() with PhetDefaultFont
8/27/07 - migrated photon image creation and caching to piccolo-phet (PhotonImageFactory)
# 1.05.00 (17033)
7/27/07 - new version published as part of new website deployment
7/24/07 - PhotonImageGenerator utility added by Sam Reid
7/10/07 - use -dev commandline arg to enable developer controls instead of javaws.phet.developer property
6/15/07 - convert description properties to well-formed HTML
# 1.04.00 (15867)
6/13/07 - use property javaws.phet.developer to enable developer controls
6/13/07 - remove ARTS implementation (GPL) of associated Legendre polynomials, remove from credits